--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "private": true,
   "scripts": {
     "build": "npm -prefix frontend run build",
-    "preinstall": "cd ./api && npm install",
-    "install": "cd ./frontend && npm install",
-    "start": "npx concurrently 'npm run start:backend' 'npm run start:frontend'",
-    "start:backend": "npm --prefix ./api start",
-    "start:frontend": "npm --prefix ./frontend start",
-    "start:dev": "npx concurrently \"npm run start:dev --prefix ./api\" \"npm start --prefix ./frontend\" "
+    "install:api": "cd ./api && npm install",
+    "install:frontend": "cd ./frontend && npm install",
+    "start:api": "cd ./api && npm start",
+    "start:frontend": "cd ./frontend && npm start",
+    "packages": "concurrently \"npm run install:api\" \"npm run install:frontend\"",
+    "start": "concurrently \"npm run start:frontend\" \"npm run start:api\""
   },
   "keywords": [],
   "author": "",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "concurrently": "^8.0.1"
+  }
 }
